# web_scraper

./: .gitmodules  LICENSE  requirements.txt  setup.cfg
web_scraper/: __init__.py  entrypoints.py  model.py  resources.py  runtime.py  workers.py
