[metadata]
name = web_scraper
version = 0.0.1
description = Web scraping framework
author = Jeffrey Pepin
url = https://github.com/peffjepin/web_scraper
license = MIT
license_file = LICENSE
platforms = linux
classifiers = Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >= 3.8
include_package_data = yes
zip_safe = no
install_requires =
    selenium
    beautifulsoup4
    requests
